@@ -3,6 +3,7 @@ package gul.hotel;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 import org.springframework.boot.context.properties.source.InvalidConfigurationPropertyValueException;
 import org.springframework.stereotype.Service;
@@ -44,7 +45,9 @@ public class HotelServiceImpl implements HotelService {
     }
     public List<Hotel> getAllBySearchInputs(String location, String experienceLevel, String pool){
         List<Hotel> hotels = hotelRepository.findAll();
-        return hotels.stream().filter(hotel -> hotel.getLocation()==location && hotel.getExperienceLevel() == experienceLevel && hotel.getPool()==pool).toList();
+        return hotels.stream().filter(hotel -> hotel.getLocation().equalsIgnoreCase(location)
+                    && hotel.getExperienceLevel().equalsIgnoreCase(experienceLevel) &&
+                     hotel.getPool().equalsIgnoreCase(pool)).collect(Collectors.toList());
     
 
     }
